force-app/main/default/objects/DaScoopComposer__Lead_Match__c/DaScoopComposer__Lead_Match__c.object-meta.xml
<CustomObject>
    <description>Matches Leads and Accounts in a many-to-many relationship</description>
    <label>Lead Match</label>
    <nameField>
        <label>Match Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>