force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Account_Owner__c</fullName>
    <formula>DaScoopComposer__AccountId__r.Owner.FirstName &amp; &apos; &apos; &amp;  DaScoopComposer__AccountId__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>