force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__AccountId__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matching Leads</relationshipLabel>
    <relationshipName>Lead_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>