force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Convert__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Convert__c</fullName>
    <formula>HYPERLINK(
&apos;/lead/leadconvert.jsp?id=&apos; &amp; DaScoopComposer__LeadId__r.Id &amp; &apos;&amp;acclkid_lkid=&apos; &amp; DaScoopComposer__AccountId__r.Id &amp; &apos;&amp;accid=&apos; &amp; DaScoopComposer__AccountId__r.Name,
&apos;Convert&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Convert the lead to the the account</inlineHelpText>
    <label>Convert</label>
    <type>Text</type>
</CustomField>