force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Dedupe_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Dedupe Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>