force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Is_Converted__c</fullName>
    <formula>DaScoopComposer__LeadId__r.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Converted</label>
    <type>Checkbox</type>
</CustomField>