force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead_Created_Date__c</fullName>
    <formula>TEXT(DATEVALUE(DaScoopComposer__LeadId__r.CreatedDate)) &amp; &apos;, &apos; &amp;  DaScoopComposer__LeadId__r.CreatedBy.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__LeadId__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date</label>
    <type>Text</type>
</CustomField>