force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead_Key__c</fullName>
    <label>Lead Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>