force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead_Owner__c</fullName>
    <formula>DaScoopComposer__LeadId__r.Owner:Queue.QueueName &amp;  DaScoopComposer__LeadId__r.Owner:User.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__LeadId__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>