force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead_Source__c</fullName>
    <formula>TEXT(DaScoopComposer__LeadId__r.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>