force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead_Status__c</fullName>
    <formula>TEXT(DaScoopComposer__LeadId__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>