force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__LeadId__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Matching Accounts</relationshipLabel>
    <relationshipName>Lead_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>