force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Matching_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Matching_Company_Name__c</fullName>
    <label>Matching Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>