force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Matching_Email__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Matching_Email__c</fullName>
    <label>Matching Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>