force-app/main/default/objects/DaScoopComposer__Lead_Match__c/fields/DaScoopComposer__Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Matching_Score__c</fullName>
    <label>Matching Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>